# the-idiot-test

./: .gitignore  README.md  analysis.py  app.py  call_gpt.py  command_history_DANDESKTOP.txt  import_export.py  log_love.py  openai_auth.py  railway.json  requirements.txt  schema.json
.streamlit/: config.toml
cosinesim/: README.md  frontend.py
cosinesim/backend/: backend.py  memoryTests.py  modelManager.py  pyproject.toml  railway.toml
cosinesim/frontend/: frontend.py  pyproject.toml  railway.toml
