[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.11.9"
dependencies = [
    "fastapi>=0.115.6",
    "matplotlib>=3.9.3",
    "numpy<=2.0.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "psutil>=6.1.0",
    "python-multipart>=0.0.19",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.40.2",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "uvicorn>=0.32.1",
]
